# Civilization

./: .gitignore  Base_Resource.cpp  Base_Resource.h  Base_Resource_Package.cpp  Base_Resource_Package.h  Build_Menu.cpp  Build_Menu.h  Building.cpp  Building.h  Building_Name.cpp  Building_Name.h  CMakeLists.txt  City.cpp  City.h  Civilization.cpp  Civilization.h  Civilization_Name.cpp  Civilization_Name.h  Color.cpp  Color.h  Coordinate.cpp  Coordinate.h  Draw_Manager.cpp  Draw_Manager.h  End_Screen.cpp  End_Screen.h  Game.cpp  Game.h  Main_Screen.cpp  Main_Screen.h  Map.cpp  Map.h  Menu_Option.cpp  Menu_Option.h  Pause_Screen.cpp  Pause_Screen.h  Piece.cpp  Piece.h  README.md  Screen.cpp  (+28 more)
